<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@mipmap/background"
    android:clickable="true"
    android:id="@+id/back">
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/reg_mail"
        android:text="@string/email"
        android:background="#ffffff"
        android:width="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="79dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/style_file"
        android:padding="7dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passo"
        android:layout_below="@+id/reg_mail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:text="@string/password_valur"
        android:background="#ffffff"
        android:padding="7dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/number"
        android:layout_below="@+id/passo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:background="#ffffff"
        android:text="@string/number_text"
        android:padding="7dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/save_button_text"
        android:id="@+id/save_button"
        android:layout_below="@+id/number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#f62e24"
        android:padding="15dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/change_title_text"
        android:id="@+id/ch_settings"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

