<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:id="@+id/reg"
    tools:context=".RegActivity">


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:inputType="phone"
        android:ems="10"
        style="@style/style_file"
        android:id="@+id/reg_phone"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="83dp"
        android:background="#ffffff"
        android:hint="@string/phone_val"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/reg_mail"
        android:background="#ffffff"
        android:hint="@string/email_val"
        android:layout_below="@+id/reg_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        style="@style/style_file"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reg_pass"
        android:layout_marginTop="30dp"
        android:hint="@string/pass_val"
        android:background="#ffffff"
        android:layout_below="@+id/reg_mail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/style_file"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/reg_vall"
        android:id="@+id/reg_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:visibility="visible"
        android:enabled="true"
        android:background="#f62e24"
        android:textColor="#ffffff" />
</RelativeLayout>