<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@mipmap/background"
    android:clickable="true">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sinhronize"
        android:id="@+id/sinhbutton"
        android:checked="false"
        android:background="@mipmap/run"
        android:textOff="@string/Off_sinh"
        android:textOn="@string/on_sinh"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/total"
        android:layout_below="@+id/sinhbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#f62e24"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:enabled="false"
        android:visibility="visible"
        android:text="@string/total" />

</RelativeLayout>

