<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Load"
    android:background="#fff"
    android:clickable="true">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/l_layout">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="330dp"
                android:orientation="vertical"
                android:background="@mipmap/another_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/load_updates"
                    android:id="@+id/textView3"
                    android:layout_below="@+id/progressBar"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/warnin_update"
                    android:id="@+id/textView4"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ccc"
                    android:layout_marginTop="35dp"
                    android:padding="10dp" />

            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dellcont"
                android:id="@+id/checkBox"
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:padding="5dp"
                android:textColor="#666666" />

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="35dp"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">
            </TextView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

